name:                prometheus-effect
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Prometheus
                       Prometheus.GHC
  build-depends:       base >=4.9 && <4.11
                     , clock
                     , containers
                     , http-types >= 0.9.1
                     , labels
                     , mtl
                     , scientific
                     , text
                     , transformers
                     , vector >= 0.11.0.0
                     , vector-algorithms
                     , wai
                     , bytestring
                     , http-streams
                     , io-streams
                     , ghc-prim
                     , retry
                     , safe-exceptions
  default-language:    Haskell2010
  ghc-options:         -Wall

executable test
  hs-source-dirs: test
  build-depends: base, warp, prometheus-effect, http-types, wai, random
  default-language: Haskell2010
  main-is: Test.hs
  ghc-options: -O1 -ddump-simpl -dsuppress-idinfo -dsuppress-coercions

test-suite weight
  hs-source-dirs:      weight
  build-depends:       base
                     , weigh
                     , prometheus-effect
  default-language:    Haskell2010
  ghc-options:         -Wall -O1
  main-is:             Weight.hs
  type:                exitcode-stdio-1.0