name:                prometheus-effect
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Prometheus
                       Prometheus.GHC
  build-depends:       base >=4.9 && <4.11
                     , bytestring
                     , clock
                     , hashable >= 1.2.4.0
                     , http-streams
                     , http-types >= 0.9.1
                     , io-streams
                     , mtl
                     , retry
                     , safe-exceptions
                     , streaming
                     , streaming-wai
                     , streaming-bytestring
                     , streaming-utils
                     , text
                     , transformers
                     , unordered-containers
                     , vector >= 0.11.0.0
                     , vector-algorithms
                     , wai
  default-language:    Haskell2010
  -- Use -O2 for a 50% performance increase in observe
  ghc-options:         -Wall -O2

executable test
  hs-source-dirs: test
  build-depends: base, warp, prometheus-effect, http-types, wai, random, text
  default-language: Haskell2010
  main-is: Test.hs
  ghc-options: -O1

test-suite weight
  hs-source-dirs:      weight
  build-depends:       base
                     , weigh
                     , prometheus-effect
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -O1
  main-is:             Weight.hs
  type:                exitcode-stdio-1.0

benchmark benchmarks
  hs-source-dirs:      bench
  build-depends:       base
                     , weigh
                     , criterion
                     , prometheus-effect
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -O1
  main-is:             Bench.hs
  type:                exitcode-stdio-1.0